crates/solidity/testing/snapshots/bindings_output/errors/definitions/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or OpenBracket.
   ╭─[ input.sol:1:7 ]
   │
 1 │ error TopLevelError(int x, int y);
   │       ─────────────┬─────────────  
   │                    ╰─────────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:4:24 ]
   │
 4 │     error ContractError(int x, int y);
   │                        ───────┬──────  
   │                               ╰──────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     error ContractError(int x, int y);
   │           ──────┬──────  
   │                 ╰──────── name: 2
   │
   ├─[ input.sol:1:1 ]
   │
 1 │ error TopLevelError(int x, int y);
   │ ──┬──  
   │   ╰──── unresolved
   │ 
 4 │     error ContractError(int x, int y);
   │     ──┬──  
   │       ╰──── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 2 │ ╭─▶ 
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 4 │     error ContractError(int x, int y);
   │ ───────────────────┬───────────────────  
   │                    ╰───────────────────── definiens: 2
───╯
